# spring-alpha

./: .dockerignore  .env.example  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  DESIGN.md  PROGRESS.md  README.md  README_EN.md  VERIFY.md  agent.md  docker-compose.yml  postman_collection.json  render.yaml  run_checks.sh  start_backend.example.sh  test.html  testing.md  verify_backend.sh
backend/: .dockerignore  .factorypath  .project  Dockerfile  Dockerfile.vultr  pom.xml  response.txt  stream_sample.txt
backend/research-service/: pyproject.toml
backend/research-service/app/: __init__.py  main.py
backend/research-service/app/agents/: business_driver_agent.py  coverage.py  earnings_agent.py  research_workflow.py  tool_calling_graph.py
backend/research-service/app/contracts/: __init__.py  archive.py  report.py  tools.py
backend/research-service/app/evals/: __init__.py
backend/research-service/app/evals/datasets/: stage1_hard_rag_cases.json  stage1_live_rag_cases.json
backend/research-service/app/evals/datasets/filings/: aapl_2026_q2_10q_excerpt.txt  amzn_2026_q1_10q_excerpt.txt  jpm_2026_q1_10q_excerpt.txt  tsla_2026_q1_10q_excerpt.txt
backend/research-service/app/persistence/: report_archive.py
backend/research-service/app/rag/: llamaindex_pipeline.py
docs/: decisions.md  dynamic-agent-loop.md  spec.md  task-contract.md  ui-guidelines.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  test_parser.js  vitest.config.ts
planning/: FEATURES.json  PROGRESS.md  TASKS.md  TOOLS.md
(+271 files in other folders)
