[project]
name = "spring-alpha-research-service"
version = "0.1.0"
description = "Bounded agent sidecar for Spring Alpha with later Evidence RAG support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "langgraph>=1.0.0,<2.0.0",
    "llama-index-core>=0.12.0,<0.13.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "qdrant-client>=1.15.0,<2.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require external services",
    "live: tests that call live external providers",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[[tool.mypy.overrides]]
module = ["langgraph.*"]
ignore_missing_imports = true
